End of Express basic

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,10 +5,8 @@
     <title>Home page of the site</title>
   </head>
   <body>
-    <h1>{{pageTitle}}</h1>
-    <p>{{welcomeMessage}}</p>
-    <footer>
-      <p>{{currentYear}}</p>
-    </footer>
+    {{> header}}
+    <p>{{screamIt welcomeMessage}}</p>
+    {{> footer}}
   </body>
 </html>
