--- a/views/maintenance.hbs
+++ b/views/maintenance.hbs
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>About page</title>
+    <title>{{pageTitle}}</title>
   </head>
   <body>
     {{> header}}
-    <p>This is your about page</p>
+    <p>The site is down</p>
     {{> footer}}
   </body>
 </html>
